tests/fixtures/invalid/pow_float_bytes_none.py
# Cannot call pow() with Float, Bytes, None
x = pow(1.0, b"hello", None)
